# i-use-it

./: .gitignore  Cargo.toml  Makefile  README.md  data.toml  readme.hbs  todo.txt
data/: crate.toml  crate_description.toml  crate_list.txt  database.toml  devops.toml  programming_language.toml  pypi.toml  pypi_description.toml  pypi_list.txt  service.toml  service.txt  settings.toml  soft.toml
src/: error.rs  lib.rs  main.rs  pypi.rs
src/processor/: crates.rs  mod.rs  pypi.rs
