[package]
name = "i-use-it"
version = "0.1.0"
authors = ["Max Block <maxblock@pm.me>"]
edition = "2018"

[dependencies]
toml = "0.5"
handlebars = "3.5.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
reqwest = { version = "0.10", features = ["blocking", "json"] }
threadpool = "1.8.1"
isahc = "0.9.10"